--- a/Trivia/css/main.css
+++ b/Trivia/css/main.css
@@ -25,12 +25,6 @@ height: 100px;
       font-size: 20px;
     }
 
-
-
-
-
-
-
 /*navegation*/
 nav{
 background-color: white;
@@ -67,3 +61,15 @@ padding: 30px;
 body{
 background-color: white;
   }
+
+/*body*/
+
+.table4{
+  box-sizing: border-box;
+  border-collapse: collapse;
+  margin: 5em 4em 3em 2em;
+  }
+.table5 {
+  box-sizing: border-box;
+      border: 1px solid black;
+        font-size: 80px;
